syntax = "proto3";

package brpc;

service gateway {
    rpc routing(routeReq) returns (routeRes) {}
}

message routeReq {
    string nod = 1;
    string service = 2;
    bytes reqBody = 3;
}

message Header {
    string key = 1;
    string val = 2;
}

message routeRes {
    bytes resBody = 1;
}